feat(database): 将数据库从MySQL迁移到PostgreSQL并集成pgvector
- 将主数据库从MySQL 9.7.1迁移到PostgreSQL 18 with pgvector
- 更新application.yml中的数据源配置为PostgreSQL连接参数
- 修改Docker Compose配置文件以使用pgvector镜像替代MySQL
- 添加PostgreSQL专用的数据库初始化脚本V0.0.1__init.sql
- 更新测试用例以验证PostgreSQL和pgvector配置
- 替换MySQL驱动依赖为PostgreSQL驱动
- 修改向量存储后端从elasticsearch改为pgvector
- 更新README.md文档中的数据库连接说明
- 修改MybatisPlus配置以支持PostgreSQL数据库类型
- 移除Elasticsearch相关配置和服务
- 添加Redis哨兵模式配置用于消息队列和缓存